--- a/projects/projects.json
+++ b/projects/projects.json
@@ -52,7 +52,7 @@
   {
     "name": "Cups of love",
     "desc": "Full-Stack Flipkart with Admin Dashboard and Paytm Payment Gateway. MERN Stack WebApp, ready to use for business.",
-    "image": "image_2025_02_03T05_15_26_017Z",
+    "image": "cupsoflove",
     "category": "mern",
     "links": {
       "view": "https://play.google.com/store/apps/details?id=com.cupsoflove.app",
