--- a/projects/projects.json
+++ b/projects/projects.json
@@ -42,7 +42,7 @@
   {
     "name": "TotalGamingHub",
     "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
-    "image": "image_2025_02_03T05_15_26_014Z",
+    "image": "tgh",
     "category": "mern",
     "links": {
       "view": "https://totalgaminghub.com/",
