--- a/projects/projects.json
+++ b/projects/projects.json
@@ -32,7 +32,7 @@
   {
     "name": "BeautyBultler ",
     "desc": "Native android app built using Java, XML and Volley dependencies. Provides weather forecast.",
-    "image": "image_2025_02_03T05_15_26_016Z",
+    "image": "butler",
     "category": "android",
     "links": {
       "view": "https://www.mybeautybutler.com/",
