--- a/projects/projects.json
+++ b/projects/projects.json
@@ -12,7 +12,7 @@
   {
     "name": "BEST Lab Grown Diamonds",
     "desc": "BEST Lab Grown Diamonds. Built using Java, XML and Firebase.",
-    "image": "diamond-rensu-logo-landscape",
+    "image": "diamondRensu",
     "category": "android",
     "links": {
       "view": "https://diamondrensu.com/pages/lab-grown-diamonds",
