--- a/projects/projects.json
+++ b/projects/projects.json
@@ -62,7 +62,7 @@
   {
     "name": "SeneStudio (E-Commerce website)",
     "desc": "ReactJS Basic Resume Generator which will generate customized resume in few minutes on your requirements.",
-    "image": "image_2025_02_03T05_19_37_411Z",
+    "image": "sene",
     "category": "mern",
     "links": {
       "view": "https://senestudio.com/",
