--- a/projects/projects.json
+++ b/projects/projects.json
@@ -72,7 +72,7 @@
   {
     "name": "Aaroha(Consulutancy App)",
     "desc": "Full-Stack project dashboard which is collection of projects built on the React library.",
-    "image": "image_2025_02_03T05_15_26_015Z",
+    "image": "aroha",
     "category": "mern",
     "links": {
       "view": "https://play.google.com/store/apps/details?id=com.arohaconsulting.connect&hl=en",
