--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "Smart Packaging for Palm Sugar",
     "desc": "Developed packaging for palm sugar with a smart and intelligent packaging concept.",
-    "image": "project-gula-aren.png",
+    "image": "project-gula-aren",
     "category": "packaging",
     "links": {
       "view": "#",
@@ -12,7 +12,7 @@
   {
     "name": "SappanCare (Cholesterol Health Supplement)",
     "desc": "Developed a health supplement to combat cholesterol from Sappan wood extract (Caesalpinia sappan L.).",
-    "image": "project-sappancare.png",
+    "image": "project-sappancare",
     "category": "health",
     "links": {
       "view": "#",
@@ -22,7 +22,7 @@
   {
     "name": "Marketing Strategy for SMEs Tunjungrejo",
     "desc": "Developed marketing modules and design for chip products at UMKM Tunjungrejo, as part of MMD Universitas Brawijaya program.",
-    "image": "project-umkm.png",
+    "image": "project-umkm",
     "category": "marketing",
     "links": {
       "view": "#",
@@ -32,7 +32,7 @@
   {
     "name": "IoT Wastewater Monitoring System Prototype",
     "desc": "Designed and built a prototype for an Internet of Things (IoT) based wastewater temperature and turbidity monitoring system.",
-    "image": "project-iot-wastewater.png",
+    "image": "project-iot-wastewater",
     "category": "iot",
     "links": {
       "view": "#",
@@ -40,4 +40,5 @@
     }
   }
 ]
+
 
